--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.2",
     "font-awesome": "^4.7.0",
     "milligram": "^1.4.1",
+    "ng-sidebar": "^9.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
