--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "angular-font-awesome": "^3.1.2",
+    "date-fns": "^2.22.1",
     "font-awesome": "^4.7.0",
     "milligram": "^1.4.1",
     "ng-sidebar": "^9.4.2",
